// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly with airplane icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e2007420",
      "borderColor": "#e20074",
      "borderRadius": 8,
      "borderWidth": 2,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <Ionicons
    color="#e20074"
    name="md-airplane"
    size={32}
    style={
      Object {
        "marginRight": 16,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      style={
        Object {
          "textTransform": "capitalize",
        }
      }
    >
      Transport
    </Text.Primary>
  </View>
  <Ionicons
    color="#e20074"
    name="chevron-forward"
    size={20}
  />
</TouchableOpacity>
`;

exports[`Tag renders correctly with no icon 1`] = `
<TouchableOpacity
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e2007420",
      "borderColor": "#e20074",
      "borderRadius": 8,
      "borderWidth": 2,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginVertical": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text.Primary
      style={
        Object {
          "textTransform": "capitalize",
        }
      }
    >
      Transport
    </Text.Primary>
  </View>
  <Ionicons
    color="#e20074"
    name="chevron-forward"
    size={20}
  />
</TouchableOpacity>
`;
